Add team elo history
